[gd_scene load_steps=12 format=3 uid="uid://bihxfisedkjut"]

[ext_resource type="Script" uid="uid://butmbu2aqo0kr" path="res://brick.gd" id="1_5p85m"]
[ext_resource type="Texture2D" uid="uid://chxmg7r00ookl" path="res://assets/items and npcs.png" id="1_awxk8"]
[ext_resource type="Script" uid="uid://bskg4iktaabay" path="res://mario_bump_area.gd" id="3_mt0q5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5p85m"]
atlas = ExtResource("1_awxk8")
region = Rect2(352, 166, 16, 16)

[sub_resource type="Animation" id="Animation_mt0q5"]
resource_name = "brick_bounce"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(352, 166, 16, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.0333333, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -4), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_llic7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(352, 166, 16, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_itwfj"]
resource_name = "brick"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(352, 166, 16, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_itwfj"]
_data = {
&"RESET": SubResource("Animation_llic7"),
&"brick": SubResource("Animation_itwfj"),
&"brick_bounce": SubResource("Animation_mt0q5")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_awxk8"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5p85m"]
size = Vector2(14, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mt0q5"]
size = Vector2(16, 8)

[node name="Brick" type="CharacterBody2D"]
collision_layer = 37
collision_mask = 33
script = ExtResource("1_5p85m")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_5p85m")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_itwfj")
}

[node name="WholeBrick" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_awxk8")

[node name="MarioBumpArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_mt0q5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MarioBumpArea"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_5p85m")

[node name="MushroomArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="MushroomArea"]
position = Vector2(0, -11)
shape = SubResource("RectangleShape2D_mt0q5")

[connection signal="body_entered" from="MarioBumpArea" to="." method="_on_mario_bump_area_body_entered"]
[connection signal="hit" from="MarioBumpArea" to="." method="_on_mario_bump_area_hit"]
[connection signal="body_entered" from="MushroomArea" to="." method="_on_mushroom_area_body_entered"]
